fixed stretched image issue with featured section

--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ h3 {
 }
 
 .features-nav {
-  margin-bottom: 5rem;
+  margin-bottom: 7rem;
 }
 
 .features-nav-list-item {
@@ -245,9 +245,10 @@ h3 {
   margin-bottom: 8rem;
   display: flex;
   flex-direction: column;
+
 }
 
-.active-feature-image {
+.active-feature-figure img {
   z-index: -1;
   width: 100%;
   margin: 0 auto;
@@ -257,9 +258,9 @@ h3 {
   position: absolute;
   z-index: -2;
   width: 80%;
-  height: 60vw;
+  height: 50vw;
   left: 0;
-  margin-top: 5rem;
+  margin-top: 3rem;
   background-color: var(--soft-blue);
   border-top-right-radius: 10rem;
   border-bottom-right-radius: 10rem;
